--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,9 @@
         "pinkcrab/bladeone-provider": "^1.2",
         "pinkcrab/perique-admin-menu": "^0.1.1",
         "psr/log": "^1.1",
-        "pinkcrab/wp-hook-subscriber": "^1.0"
+        "pinkcrab/wp-hook-subscriber": "^1.0",
+        "pinkcrab/wp-nonce": "^0.1.0",
+        "pinkcrab/function-constructors": "^0.1.3"
 
     },
     "scripts": {
